--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         <header>
 <nav>
             <ul>
-                <li><a  href="./index.html">INICIO</a></li>
-                <li><a href="../pages/noticias.html">NOTICIAS</a></li>
-                <li><a href="../pages/sobre nosotros.html ">SOBRE LA BANDA</a></li>
-                <li><a href="../pages/contacto.html">CONTACTO</a></li>
+               <li><a  href="index.html">INICIO</a></li>
+                <li> <a href="./pages/noticias.html">NOTICIAS</a></li>
+                <li><a href="./pages/sobre-nosotros.html ">SOBRE LA BANDA</a></li>
+                <li><a href="./pages/contacto.html">CONTACTO</a></li>
           
           
               </ul>
