--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -13,11 +13,11 @@
  <header>
 <nav>
             <ul>
-                <li><a  href="../index.html">INICIO</a></li>
-                <li><a href="../pages/noticias.html">NOTICIAS</a></li>
-                <li><a href="../pages/sobre-nosotros.html">SOBRE LA BANDA</a></li>
-                <li><a href="../pages/contacto.html">CONTACTO</a></li>
-          
+                 <li><a  href="../index.html">INICIO</a></li>
+              <li> <a href="./noticias.html">NOTICIAS</a></li>
+              <li><a href="./sobre-nosotros.html ">SOBRE LA BANDA</a></li>
+              <li><a href="./contacto.html">CONTACTO</a></li>
+        
               </ul>
             </nav>   
         </header>
